--- a/css/main.css
+++ b/css/main.css
@@ -161,6 +161,41 @@ ul {
 .derechos {
   text-align: center; }
 
+.form {
+  font-family: 'Roboto Serif', serif;
+  height: 100vh;
+  width: 70vh;
+  margin: 2rem auto; }
+  .form .formul {
+    display: block;
+    width: 50%;
+    margin: 1rem auto;
+    display: flex;
+    flex-direction: column; }
+  .form .formul input:active {
+    border-bottom: 1px solid; }
+  .form .name, .form .numero, .form .direccion {
+    margin: 1rem 0rem;
+    line-height: 3rem;
+    background: none;
+    outline: 0;
+    border: 0; }
+  .form .btnAg {
+    margin: 1rem 0;
+    border: 0;
+    outline: 0;
+    height: 3rem;
+    border-radius: 5px;
+    background-color: plum; }
+  .form .listado {
+    display: flex;
+    flex-direction: column; }
+
+.form h2 {
+  text-align: center;
+  margin-bottom: 2rem;
+  font-size: 2.3rem; }
+
 @media (max-width: 700px) {
   .menuB {
     display: block; }
