--- a/scss/pages/inicio.scss
+++ b/scss/pages/inicio.scss
@@ -93,7 +93,52 @@
     text-align: center;
     
 }
+.form{
+    font-family: 'Roboto Serif', serif;
+    height: 100vh;
+    width: 70vh;
+    margin:2rem auto;
+    .formul{
+        display: block;
+        width: 50%;
+        margin: 1rem auto;
+        display: flex;
+        flex-direction: column;
+    }
 
+    
+    .formul input:active {
+        border-bottom: 1px solid;
+    }
+    .name,.numero,.direccion{
+        margin: 1rem 0rem;
+        line-height: 3rem;
+        background: none; 
+        outline:0;
+        border:0;
+        
+    }
+    .btnAg{
+        margin:1rem 0;
+        border:0;
+        outline: 0;
+        height: 3rem;
+        border-radius: 5px;
+        background-color: plum;
+    }
+    
+    .listado{
+        display: flex;
+        flex-direction:column;
+    }
+
+}
+.form h2{
+    text-align: center;
+    margin-bottom: 2rem;
+    font-size: 2.3rem;
+    
+}
 
   
   @media (max-width: 700px) {
